# RMC

./: README
algorithm_computing_ws/src/iks_pkg/: CMakeLists.txt  package.xml
bullet_demo/: bullet_act.py  bullet_car.py  bullet_ik.py  first_robot.urdf  iks.py
bullet_simulation_ws/src/simulation_pkg/: package.xml  setup.py
bullet_simulation_ws/src/simulation_pkg/simulation_pkg/: hand_angles_compute_node.py  hand_mimicry_simulation_node.py
bullet_simulation_ws/src/simulation_pkg/urdf/: dexh13_left.urdf  dexh13_right.urdf  plane.urdf  table.urdf
hand_demo_ws/src/hand_ctrl_publisher_test/: package.xml  setup.cfg  setup.py
hand_demo_ws/src/hand_ctrl_publisher_test/hand_ctrl_publisher_test/: hand_ctrl_publisher_node.py
hand_demo_ws/src/hand_ctrl_subscriber_test/: package.xml  setup.cfg  setup.py
hand_demo_ws/src/hand_ctrl_subscriber_test/hand_ctrl_subscriber_test/: hand_ctrl_subscriber_node.py
robot_control_ws/src/hand_controller_py_pkg/: package.xml  setup.cfg  setup.py
robot_control_ws/src/hand_controller_py_pkg/hand_controller_py_pkg/: hand_modbus_controller_node.py
robot_simulation_ws/src/bullet_simulation_pkg/: package.xml  setup.cfg  setup.py
robot_simulation_ws/src/bullet_simulation_pkg/bullet_simulation_pkg/: hand_mimicry_simulation_node.py
robot_simulation_ws/src/bullet_simulation_pkg/urdf/: panda.urdf
ros2_test_ws/src/cpp_general_pkg/: CMakeLists.txt
ros2_test_ws/src/cpp_general_pkg/src/: cpp_test.cpp
vision_computing_ws/src/recog_compute_py_pkg/: package.xml  setup.cfg  setup.py
(+2 files in other folders)
